syntax = "proto3";

option go_package = "github.com/DecarbonizedGlucose/rkv/api/raftrpc;raftrpcpb";

package raftrpc;

service RaftSnapshot {
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

message InstallSnapshotRequest {
    int64 term = 1;
    int64 leader_id = 2;
    int64 last_included_index = 3;
    int64 last_included_term = 4;
    bytes data = 5;
}

message InstallSnapshotResponse {
    int64 term = 1;
}